--- a/ok-template-ep-vue2/template/public/index.html
+++ b/ok-template-ep-vue2/template/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="google" content="notranslate" />
     <link rel="icon" href="//upload.zhenguanyu.com/uploads/5c07513b_favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>ep-vue2</title>
   </head>
   <body class="notranslate"> <!-- 添加 notranslate 类，禁止 chrome 翻译 -->
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but ep-vue2 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!--ok-webpack-plugin-plugin inset script-->
